# matchy-wireshark-plugin

./: .gitignore  Cargo.toml  LICENSE  README.md  WARP.md  build.rs  install.bat  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: build.yml
src/: display_filter.rs  lib.rs  postdissector.rs  threats.rs  wireshark_ffi.rs
tests/: integration.rs
