[package]
name = "matchy-wireshark"
version = "0.2.0"
edition = "2021"
authors = ["MatchyLabs Contributors"]
license = "Apache-2.0"
description = "Wireshark plugin for real-time threat intelligence matching"
repository = "https://github.com/matchylabs/matchy-wireshark"
# Version of Wireshark this plugin was built against
# Used by installer to check compatibility
build = "build.rs"

[lib]
name = "matchy_wireshark"
crate-type = ["cdylib"]

[dependencies]
matchy = { git = "https://github.com/matchylabs/matchy", branch = "main" }
matchy-data-format = { git = "https://github.com/matchylabs/matchy", branch = "main" }
libc = "0.2"
serde_json = "1.0"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
debug = true

[profile.dev]
opt-level = 0
debug = true
