[package]
name = "matchy-wireshark-plugin"
version = "0.2.1"
edition = "2021"
authors = ["MatchyLabs Contributors"]
license = "Apache-2.0"
description = "Wireshark plugin for real-time threat intelligence matching"
repository = "https://github.com/matchylabs/matchy-wireshark-plugin"
build = "build.rs"

[package.metadata]
# Default Wireshark version for local builds.
# CI overrides this via WIRESHARK_VERSION env var to build for multiple versions.
wireshark_version = "4.6"

[lib]
name = "matchy_wireshark_plugin"
crate-type = ["cdylib"]

[dependencies]
matchy = { git = "https://github.com/matchylabs/matchy", branch = "main" }
matchy-data-format = { git = "https://github.com/matchylabs/matchy", branch = "main" }
libc = "0.2"
serde_json = "1.0"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
debug = true

[profile.dev]
opt-level = 0
debug = true
